[#IC-456] Add Enriched Properties on GetMessage
