# openapi/index.yaml
@@ -92,11 +92,15 @@ paths:
           type: string
           required: true
           description: The ID of the message.
+        - name: public_message
+          in: query
+          type: boolean
+          description: Discriminate when to return public message shape. Default to false.
       responses:
         '200':
           description: Message found.
           schema:
-            $ref: '#/definitions/MessageResponseWithContent'
+            $ref: '#/definitions/GetMessageResponse'
           examples:
             application/json:
               message:
@@ -1306,3 +1310,13 @@ definitions:
       - $ref: '#/definitions/MessageStatusReadingChange'
       - $ref: '#/definitions/MessageStatusArchivingChange'
       - $ref: '#/definitions/MessageStatusBulkChange'
+  GetMessageResponse:
+    x-one-of: true
+    allOf:
+      - type: object
+        properties:
+          message:
+            $ref: '#/definitions/EnrichedMessage'
+        required:
+          - message
+      - $ref: '#/definitions/MessageResponseWithContent'
